--- a/Bookstore/Areas/Customer/Views/Wishlist/Index.cshtml
+++ b/Bookstore/Areas/Customer/Views/Wishlist/Index.cshtml
@@ -7,4 +7,5 @@
 
 @section Scripts{
     <script src="~/js/Customer/WishList.js"></script>
+    <script src="~/js/Customer/ShoppingBasket.js"></script>
 }
